# orbit

./: CHANGELOG.md  CLAUDE.md  README.md
.claude/: settings.json
.orbit/: .gitignore  METHOD.md  STYLE.md
.orbit/cards/: 0001-memos.yaml  0002-distill.yaml  0003-implement.yaml  0004-specs-array-integrity.yaml  0005-drive.yaml  0006-rally.yaml  0007-drive-forked-reviews.yaml  0008-consolidated-orbit-artefact-folder.yaml  0009-mission-resilience.yaml  0010-objective-functions.yaml  0011-cron-driven-execution.yaml  0012-daily-planning-protocol.yaml  0013-playbook-fast-path.yaml  0014-default-merge-after-review.yaml  0015-research-mode-iteration-loop.yaml  0016-bead-native-cold-fork-reviews.yaml  0017-setup-is-bead-aware.yaml  0018-two-artefact-contract.yaml  0019-tabletop.yaml  0020-orbit-state.yaml  0021-tasks.yaml  0022-skill-curator.yaml  0023-memory-loop.yaml  0024-lean-pass.yaml  0025-codebase-mastery.yaml  0026-executive-communication.yaml  0027-brew-installable.yaml  0028-four-pillars.yaml  0029-fan-out.yaml  0030-canonical-schema-and-glossary.yaml  0031-design-session-user-language.yaml  0032-brownfield-spec-migration.yaml  0033-see-the-tree.yaml  0034-spec-close-ac-preflight.yaml  0035-ac-taxonomy.yaml  (+4 more)
orbit-state/: Cargo.toml
orbit-state/crates/core/: Cargo.toml
orbit-state/crates/core/src/: canonicalise.rs  index.rs  layout.rs  lib.rs  reconcile.rs  schema.rs  session.rs  verbs.rs  verify.rs
orbit-state/crates/mcp/: Cargo.toml
orbit-state/crates/mcp/src/: main.rs
orbit-state/crates/mcp/tests/: parity.rs
orbit-state/crates/mcp/tests/common/: mod.rs
(+142 files in other folders)
