[package]
name = "orbit-state-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Schema, serialisation, locks, and atomic writes for orbit-state"

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
