[package]
name = "orbit-state-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "orbit MCP server — exposes orbit-state-core via Model Context Protocol"

[[bin]]
name = "orbit-mcp"
path = "src/main.rs"

[dependencies]
orbit-state-core.workspace = true
anyhow.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_yaml.workspace = true
